--- a/src/views/Play/Play.styl
+++ b/src/views/Play/Play.styl
@@ -83,8 +83,124 @@
 
     }
 
+    // Flex to escape from the containing table formats
+    .custom-games-list-header-row {
+        display: flex;
+        font-weight: bold;
+        white-space: nowrap;
+        padding-bottom: 0.5 rem;
+        justify-content: flex-start;
+    }
+
+    .challenge-list {
+    display: table;
+    width: 100%;
+    .ineligible {
+        themed color shade3
+        font-size: 0.9em;
+        vertical-align: middle;
+        cursor: help;
+    }
+
+    .challenge-row {
+        padding-top: 0.2em;
+        padding-bottom: 0.2em;
+        display: table-row;
+        font-size: 0.85em;
+        white-space: nowrap;
+
+        .head {
+            padding-left: 0.5em;
+            display: table-cell;
+            text-align: left;
+            font-weight: bold;
+            font-size: 0.8em;
+        }
+        .head.time-control-header {
+            //padding-left: 4em;
+            text-align: left;
+        }
+
+        .cell {
+            padding-left: 0.5em;
+            display: table-cell;
+            text-align: left;
+            position: relative;
+        }
+
+        .suspect-challenge {
+            position: relative;
+            i {
+                position: absolute;
+                top: 0.2rem;
+            }
+        }
+
+        .cheat-alert {
+            color: chocolate;
+            cursor: help;
+            top: 50%;
+            margin-left: .5em;
+        }
+
+        .cell .cheat-alert-tooltiptext {
+            visibility: hidden;
+            background-color: chocolate;
+            color: #fff;
+            text-align: center;
+            border-radius: 6px;
+            padding: 5px;
+
+            /* Position the tooltip */
+            position: absolute;
+            z-index: 1;
+            bottom: 1em;
+            left: 75%;
+
+            width: 10em;
+            white-space: normal;
+        }
+
+        .cell:hover .cheat-alert-tooltiptext {
+            visibility: visible;
+        }
+
+        .break {
+            border-top: 1px solid #888;
+            border-bottom: 1px solid #888;
+        }
+
+        .bold {
+            font-weight: bold;
+            font-size: 1.1em;
+        }
+
+        // automatch condition stylings
+        .no-preference {
+            themed color shade2;
+        }
+        .required {
+            font-weight: bold;
+        }
+        .preferred {
+
+        }
+    }
+
+
+    .automatch-challenge-row {
+        .cell {
+            text-align: center;
+        }
+    }
+
+    .fa-times-circle-o {
+        cursor: pointer;
+    }
+    }
+
     // long specifier to make sure this specific column is not overriden
-    #challenge-list .challenge-row .cell.rengo-list-buttons {
+    .challenge-list .challenge-row .cell.rengo-list-buttons {
         text-align: center;
         width: 10rem;
         padding-right: 1rem;
@@ -112,7 +228,7 @@
         }
 
         // long specifier to make sure this specific column is not overriden
-        #challenge-list .challenge-row .cell.rengo-list-buttons {
+        .challenge-list .challenge-row .cell.rengo-list-buttons {
             display: flex;  // t enable the buttons to wrap to the next line on narrow screens
             justify-content: flex-end;
         }
@@ -287,117 +403,3 @@
     display: inline-block;
 }
 
-#challenge-list {
-    display: table;
-    width: 100%;
-    .ineligible {
-        themed color shade3
-        font-size: 0.9em;
-        vertical-align: middle;
-        cursor: help;
-    }
-
-    // Flex to escape from the containing table formats
-    .custom-games-list-header-row {
-        display: flex;
-        font-weight: bold;
-        white-space: nowrap;
-        padding-bottom: 0.5 rem;
-    }
-
-    .challenge-row {
-        padding-top: 0.2em;
-        padding-bottom: 0.2em;
-        display: table-row;
-        font-size: 0.85em;
-        white-space: nowrap;
-
-        .head {
-            padding-left: 0.5em;
-            display: table-cell;
-            text-align: left;
-            font-weight: bold;
-            font-size: 0.8em;
-        }
-        .head.time-control-header {
-            //padding-left: 4em;
-            text-align: left;
-        }
-
-        .cell {
-            padding-left: 0.5em;
-            display: table-cell;
-            text-align: left;
-            position: relative;
-        }
-
-        .suspect-challenge {
-            position: relative;
-            i {
-                position: absolute;
-                top: 0.2rem;
-            }
-        }
-
-        .cheat-alert {
-            color: chocolate;
-            cursor: help;
-            top: 50%;
-            margin-left: .5em;
-        }
-
-        .cell .cheat-alert-tooltiptext {
-            visibility: hidden;
-            background-color: chocolate;
-            color: #fff;
-            text-align: center;
-            border-radius: 6px;
-            padding: 5px;
-
-            /* Position the tooltip */
-            position: absolute;
-            z-index: 1;
-            bottom: 1em;
-            left: 75%;
-
-            width: 10em;
-            white-space: normal;
-        }
-
-        .cell:hover .cheat-alert-tooltiptext {
-            visibility: visible;
-        }
-
-        .break {
-            border-top: 1px solid #888;
-            border-bottom: 1px solid #888;
-        }
-
-        .bold {
-            font-weight: bold;
-            font-size: 1.1em;
-        }
-
-        // automatch condition stylings
-        .no-preference {
-            themed color shade2;
-        }
-        .required {
-            font-weight: bold;
-        }
-        .preferred {
-
-        }
-    }
-
-
-    .automatch-challenge-row {
-        .cell {
-            text-align: center;
-        }
-    }
-
-    .fa-times-circle-o {
-        cursor: pointer;
-    }
-}
