--- a/src/components/AnnulQueueModal/AnnulQueueModal.styl
+++ b/src/components/AnnulQueueModal/AnnulQueueModal.styl
@@ -79,15 +79,15 @@
         display: flex;
         position: absolute;
         height: 10%;
-        min-width: 85%;
         bottom: 0px;
         right: 0px;
         align-items: center;
         justify-content: space-between;
+        width: 85%;
     }
 
-    .close-btn {
-        margin-right: 10px;
+    .actions, .close {
+        margin: 0 20px;
     }
 
     .strikethrough {
@@ -124,12 +124,37 @@
         }
     }
 
+    .gamelist-nav {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+    }
+
+    .nav-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        span {
+            font-size: 1.1rem;
+        }
+    }
+
+    .gamelist-nav .fa {
+        cursor: pointer;
+        font-size: 1.7rem;
+        transition: transform 0.3s ease;
+        z-index: 1;
+        margin: 15px;
+    }
+
+    .gamelist-nav .fa:hover {
+        transform: scale(1.3); /* Adjust the scale value to your preference */
+        color: #2196f3;
+    }
+
+
     .AnnulPopover {
-        // position: absolute;
-        // top: 0;
-        // left: 0;
-        // right: 0;
-        // bottom: 0;
         min-height: 100%;
         min-width: 100%;
         height: 100%;
@@ -149,7 +174,6 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        // background-color: rgba(255, 255, 255, 0.9);
         padding: 10px;
         border-radius: 5px;
     }
