--- a/src/components/AnnulQueueModal/AnnulQueueModal.styl
+++ b/src/components/AnnulQueueModal/AnnulQueueModal.styl
@@ -2,7 +2,6 @@
     min-width: 80vw;
     min-height: 90vh;
     margin-top: 5vh;
-    z-index: 5;
 
     .header {
         justify-content: space-between;
@@ -47,6 +46,13 @@
         top: 0px;
         right: 0px;
         overflow-y: scroll;
+
+         -ms-overflow-style: none; /* Internet Explorer 10+ */
+        scrollbar-width: none; /* Firefox */
+    }
+
+    .game-container::-webkit-scrollbar {
+        display: none; /* Safari and Chrome */
     }
 
     .game {
@@ -58,6 +64,9 @@
         align-content: stretch;
         flex-wrap: wrap;
         max-width: 100%;
+        overflow-y: scroll;
+        overflow-x: hidden;
+        overscroll-behavior: contain;
 
         .col {
             flex: 1;
@@ -93,7 +102,7 @@
 
     .strikethrough {
         text-decoration: line-through;
-        color: #444; /* Choose a more subdued color; you can adjust this value as needed */
+        color: #444; 
     }
 
     ul {
@@ -150,7 +159,7 @@
     }
 
     .gamelist-nav .fa:hover {
-        transform: scale(1.3); /* Adjust the scale value to your preference */
+        transform: scale(1.3); 
         color: #2196f3;
     }
 
