--- a/src/components/AnnulQueueModal/AnnulQueueModal.styl
+++ b/src/components/AnnulQueueModal/AnnulQueueModal.styl
@@ -164,7 +164,7 @@
     }
 
 
-    .AnnulPopover {
+    .AnnulOverlay {
         min-height: 100%;
         min-width: 100%;
         height: 100%;
@@ -208,7 +208,7 @@
     }
 }
 
-.overlay {
+.bg-overlay {
   position: fixed;
   top: 0;
   left: 0;
