Clarify annul related naming, hide annul button on player careds of ongoing games

--- a/src/views/Game/PlayerCards.styl
+++ b/src/views/Game/PlayerCards.styl
@@ -3,7 +3,7 @@
         color: #FF8B00;
     }
 }
-.next-game-arrows {
+.player-card-mod-controls {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
