--- a/src/components/AnnulQueueModal/AnnulQueueModal.styl
+++ b/src/components/AnnulQueueModal/AnnulQueueModal.styl
@@ -141,6 +141,48 @@
         
     }
 
+    .icon-button {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .nav-arrow {
+        background: none;
+        border: none;
+        padding: 0;
+        cursor: pointer;
+        outline: none;
+        box-shadow: none;
+    }
+
+    .nav-arrow:hover i,
+    .nav-arrow:focus i {
+        transform: scale(1.3);
+        color: #2196f3;
+    }
+
+
+    .nav-arrow:hover,
+    .nav-arrow:focus {
+        background: none;
+        border: none;
+        box-shadow: none;
+    }
+    
+    .nav-arrow.left {
+        margin-right: 5px;
+    }
+
+    .nav-arrow.right {
+        margin-left: 5px;
+    }
+
+    .nav-arrow:focus {
+        outline: none;
+    }
+
+
     .nav-wrapper {
         display: flex;
         align-items: center;
