--- a/src/components/AnnulQueueModal/AnnulQueueModal.styl
+++ b/src/components/AnnulQueueModal/AnnulQueueModal.styl
@@ -1,7 +1,11 @@
 .AnnulQueueModal {
     min-width: 80vw;
     min-height: 90vh;
-    margin-top: 5vh;
+    z-index: 1000;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
     .header {
         justify-content: space-between;
