Use flex-end instead of end

--- a/src/views/ReportsCenter/ReportsCenterHistory.styl
+++ b/src/views/ReportsCenter/ReportsCenterHistory.styl
@@ -8,7 +8,7 @@
     .history-options {
         display: flex;
         justify-content: flex-end;
-        align-items: end;
+        align-items: flex-end;
         width: 100%;
         margin-bottom: 10px;
     }
