--- a/src/components/Dock/Dock.styl
+++ b/src/components/Dock/Dock.styl
@@ -85,6 +85,14 @@ dock-inline-height=500px
     }
 }
 
+// make the elements in the Dock line up properly in mobile mode
+// (doesn't affect full screen Dock because that isn't flex)
+.Dock > * {
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex-basis: 30%;
+}
+
 .Dock.inline {
     position: relative;
     right: 0;
