--- a/src/views/Game/Game.styl
+++ b/src/views/Game/Game.styl
@@ -60,7 +60,7 @@ goban-view-bar-width=400px
 .MainGobanView {
     display: flex;
     flex-direction: row;
-    align-items: stretch; // this is the default, I wonder why we need to say it?
+    align-items: stretch;
     //align-content: stretch;
     //justify-content: stretch;
 
@@ -396,11 +396,6 @@ goban-view-bar-width=400px
         flex-direction: column;
         align-items: stretch;
         width: 100%;
-
-        // Why? ...
-        .goban-container {
-        }
-
     }
     &.portrait .center-col {
         .cancel-button {
