Layout tweaks to stablize and compact ViewReport

--- a/src/views/ReportsCenter/ViewReport.styl
+++ b/src/views/ReportsCenter/ViewReport.styl
@@ -8,6 +8,10 @@
     textarea {
     }
 
+    .hide {
+        visibility: hidden;
+    }
+
     h3.users {
         display: flex;
         flex-direction: row;
@@ -26,12 +30,14 @@
     }
 
     .header {
+        margin-bottom: 1 rem;
+
         .report-id {
             margin-right: 1rem;
         }
         button {
-            margin-left: 1rem;
-            margin-right: 1rem;
+            margin-left: 0.5rem;
+            margin-right: 0.5rem;
         }
     }
 
@@ -60,10 +66,7 @@
     }
 
     .when {
-        font-size: 0.9rem;
-        font-weight: 400;
-        padding-left: 1rem;
-        float: right;
+        margin-left: 0.8rem; // this is the font size in this span
     }
 
     .newer-older-buttons {
