Ensure that the close buttons end up sensibly-near to the messaging buttons always, stop the related reports from wrapping and taking up more vertical space (and also tweak a message template title so it fits in the space)

--- a/src/views/ReportsCenter/ViewReport.styl
+++ b/src/views/ReportsCenter/ViewReport.styl
@@ -80,6 +80,16 @@
         }
     }
 
+    .related-reports {
+        ul li {
+            font-size: smaller; // so that reports related three ways don't wrap
+        }
+    }
+
+    .actions-right {
+        align-items: flex-end; // put the buttons down close-ish to the send-warning buttons
+    }
+
     .automod-analysis {
         margin-bottom: 1rem;
         .analysis {
