--- a/src/views/Game/Game.styl
+++ b/src/views/Game/Game.styl
@@ -288,8 +288,6 @@ goban-view-bar-width=400px
         }
     }
 
-
-
     .goban-container {
         flex-grow: 1;
         display: flex;
@@ -395,6 +393,7 @@ goban-view-bar-width=400px
         flex-direction: column;
         align-items: stretch;
         width: 100%;
+        margin: 0.5rem;
     }
     &.portrait .center-col {
         .cancel-button {
