--- a/src/views/Game/Game.styl
+++ b/src/views/Game/Game.styl
@@ -393,7 +393,7 @@ goban-view-bar-width=400px
         flex-direction: column;
         align-items: stretch;
         width: 100%;
-        margin: 0.5rem;
+        margin-right: 0.5rem;
     }
     &.portrait .center-col {
         .cancel-button {
