Split game log events on '_' so they wrap, and hence game log fits next to chat in report view.

--- a/src/views/ReportsCenter/ReportsCenter.styl
+++ b/src/views/ReportsCenter/ReportsCenter.styl
@@ -133,6 +133,10 @@ reports_center_content_width=56rem
             justify-content: stretch;
             align-content: stretch;
             padding: 0.5rem;
+
+            .event {
+                padding-right: 0.3rem;
+            }
         }
     }
 
