Updated reports center view to show daily goal instead of how many total reports there are

--- a/src/components/IncidentReportTracker/IncidentReportTracker.styl
+++ b/src/components/IncidentReportTracker/IncidentReportTracker.styl
@@ -26,14 +26,14 @@
     themed color shade3
 
     .fa-exclamation-triangle.active {
-        themed color reject
+        themed color primary
     }
     &:hover {
         .fa-exclamation-triangle {
             themed color shade2
         }
         .fa-exclamation-triangle.active {
-            themed-lighten color reject 30%
+            themed-lighten color primary 30%
         }
     }
     .count {
