--- a/src/views/ReportsCenter/ReportsCenter.styl
+++ b/src/views/ReportsCenter/ReportsCenter.styl
@@ -140,6 +140,13 @@ reports_center_content_width=56rem
         }
     }
 
+    .progress {
+        margin-bottom: 0.5rem;
+    }
+
+    .progress-bar.empty {
+        themed background-color shade5
+    }
 }
 
 #ReportsCenterContainer {
